# cpp-compiler-options

./: CHANGELOG.md  LICENSE  README.md  c.cmake  c.jam  c.lua  compiler-options.lua  cpp.cmake  cpp.jam  cpp.lua  generate.sh  generators-template.lua  index.html  update_readme.lua
c/: SConscript  flags.lua  meson.build  meson_options.txt  xmake.lua
cpp/: SConscript  flags.lua  meson.build  meson_options.txt  xmake.lua
output/: bjam  c_bjam  c_cmake  c_meson  c_premake5  clang-3.1-debug-full  clang-3.1-debug_full  clang-3.1-debug_full_broken_abi  clang-3.1-debug_full_broken_abi_and_bugged  clang-3.1-sanitizers  clang-3.1-stl_debug_broken_abi_and_bugged  clang-3.1-template_tree  clang-3.1-warnings_strict  clang-3.4-debug_full  clang-3.4-debug_full_broken_abi  clang-3.4-sanitizers  clang-3.4-warnings  clang-3.6-debug_full_broken_abi  clang-3.6-report_template  clang-3.6-warnings_strict  clang-3.9-debug_full  clang-3.9-sanitizers  clang-3.9-warnings  clang-4.8-debug_full  clang-4.8-debug_full_broken_abi  clang-4.8-sanitizers  clang-4.8-warnings_strict  clang-4.9-debug_full  clang-4.9-debug_full_broken_abi  clang-4.9-glibcxx_debug  clang-4.9-sanitizers  clang-4.9-warnings  clang-5.0-debug_full  clang-5.0-debug_full_broken_abi  clang-5.0-warnings  clang-6.0-debug-full  clang-6.0-debug_full  clang-6.0-debug_full_broken_abi  clang-6.0-debug_full_broken_abi_and_bugged  clang-6.0-sanitizers  (+76 more)
output/c/: bjam  cmake  meson  meson_options.txt  premake5  scons  xmake  xmake_options.lua
output/c/clang/: clang-11.0-warnings  clang-16.0-debug_full  clang-16.0-warnings  clang-16.0-warnings_with_conversions  clang-3.0-release  clang-3.0-warnings  clang-3.0-warnings_with_conversions  clang-3.1-debug_full_broken_abi  clang-3.1-warnings  clang-3.1-warnings_with_conversions  clang-3.2-warnings_with_conversions  clang-3.4-release  clang-3.4-warnings  clang-3.4-warnings_strict  clang-3.4-warnings_with_conversions  clang-3.9-warnings_strict  clang-4.9-warnings_strict  clang-6.0-warnings  clang-6.0-warnings_strict  clang-6.0-warnings_with_conversions  clang-7.0-warnings  clang-8.0-sanitizers  clang-8.0-warnings  clang-8.0-warnings_strict  clang-8.0-warnings_with_conversions  clang-9.0-warnings_strict
output/c/clang-cl/: clang-cl-16.0-debug_full  clang-cl-16.0-release  clang-cl-16.0-warnings  clang-cl-16.0-warnings_with_conversions  clang-cl-7.0-debug_full  clang-cl-7.0-warnings  clang-cl-7.0-warnings_strict  clang-cl-7.0-warnings_with_conversions  clang-cl-8.0-debug  clang-cl-8.0-warnings  clang-cl-8.0-warnings_with_conversions  clang-cl-warnings  clang-cl-warnings_strict
output/c/gcc/: gcc-10.0-release  gcc-12.0-sanitizers  gcc-12.0-warnings  gcc-12.0-warnings_with_conversions  gcc-14.0-debug_full  gcc-14.0-sanitizers  gcc-14.0-warnings  gcc-14.0-warnings_with_conversions  gcc-3.4-warnings  gcc-4.6-release  gcc-4.6-warnings  gcc-4.6-warnings_strict  gcc-4.6-warnings_with_conversions  gcc-4.7-warnings  gcc-4.7-warnings_strict  gcc-4.7-warnings_with_conversions  gcc-4.8-debug_full  gcc-4.8-sanitizers  gcc-4.8-warnings  gcc-4.8-warnings_strict  gcc-4.8-warnings_with_conversions  gcc-4.9-warnings  gcc-4.9-warnings_strict  gcc-4.9-warnings_with_conversions  gcc-5.0-sanitizers  gcc-5.0-warnings  gcc-5.0-warnings_strict  gcc-5.1-warnings  gcc-5.1-warnings_strict  gcc-5.1-warnings_with_conversions  gcc-6.1-warnings  gcc-6.1-warnings_strict  gcc-6.1-warnings_with_conversions  gcc-7.0-suggestions  gcc-7.0-warnings  gcc-7.0-warnings_strict  gcc-7.1-debug_full_broken_abi  gcc-7.1-release  gcc-7.1-warnings  gcc-7.1-warnings_strict  (+6 more)
output/c/icc/: icc-debug_full_broken_abi  icc-release  icc-warnings  icc-warnings_with_conversions
output/c/icl/: icl-debug  icl-debug_full_broken_abi  icl-sanitizers  icl-warnings
output/c/msvc/: msvc-14.0-debug_full  msvc-14.0-warnings  msvc-14.0-warnings_with_conversions  msvc-15.0-warnings  msvc-15.0-warnings_with_conversions  msvc-15.16-warnings  msvc-15.16-warnings_with_conversions  msvc-16.5-warnings  msvc-16.6-debug_full  msvc-16.6-stl_debug  msvc-16.7-debug_full  msvc-16.7-warnings  msvc-16.7-warnings_with_conversions  msvc-16.9-debug_full_broken_abi  msvc-16.9-sanitizers  msvc-16.9-warnings_with_conversions  msvc-17.0-warnings  msvc-17.0-warnings_with_conversions  msvc-17.4-warnings  msvc-17.4-warnings_with_conversions  msvc-19.0-debug_full_broken_abi  msvc-19.0-warnings  msvc-19.0-warnings_with_conversions  msvc-19.20-sanitizers  msvc-19.20-warnings  msvc-19.20-warnings_with_conversions  msvc-19.21-warnings_strict  msvc-19.25-warnings  msvc-19.28-warnings_with_conversions  msvc-19.29-warnings  msvc-19.29-warnings_with_conversions  msvc-19.30-warnings  msvc-19.30-warnings_with_conversions  msvc-19.32-warnings  msvc-19.32-warnings_with_conversions  msvc-19.34-warnings  msvc-19.34-warnings_with_conversions  msvc-19.38-debug_full_broken_abi  msvc-19.38-warnings  msvc-19.38-warnings_with_conversions  (+2 more)
output/clang/: clang-3.1-debug_full  clang-3.1-debug_full_broken_abi_and_bugged  clang-3.1-sanitizers  clang-3.4-c_warnings  clang-3.9-debug_full  clang-3.9-debug_full_broken_abi_and_bugs  clang-6.0-debug_full_broken_abi  clang-6.0-debug_full_broken_abi_and_bugged  clang-8.0-debug_full  clang-8.0-warnings_strict
output/cpp/: bjam  cmake  meson  meson_options.txt  premake5  scons  xmake  xmake_options.lua
output/cpp/clang-cl/: clang-cl-10.0-debug_full  clang-cl-10.0-release  clang-cl-10.0-sanitizers  clang-cl-10.0-stl_debug  clang-cl-10.0-warnings  clang-cl-10.0-warnings_with_conversions  clang-cl-11.0-debug_full_broken_abi  clang-cl-11.0-release  clang-cl-debug  (+34 more)
output/gcc/: gcc-4.7-warnings  gcc-4.8-warnings_strict  gcc-4.9-warnings_strict  gcc-5.0-warnings_strict  gcc-5.1-warnings  gcc-5.1-warnings_strict  gcc-6.1-warnings_strict  gcc-7.0-c_warnings_strict  gcc-7.0-sanitizers  gcc-7.0-warnings  gcc-7.0-warnings_strict  gcc-7.1-c_warnings  gcc-7.1-warnings  gcc-7.1-warnings_strict  gcc-8.0-sanitizers-pointer  gcc-8.0-warnings  gcc-8.0-warnings_strict
output/msvc/: msvc-c_warnings  msvc-debug_full  msvc-warnings_strict
test/cmake/: CMakeLists.txt  CmakeLists.txt
(+232 files in other folders)
